[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/StartScreen.gd" type="Script" id=1]
[ext_resource path="res://themes/CarnivalTheme.tres" type="Theme" id=2]
[ext_resource path="res://themes/SpaceTheme.tres" type="Theme" id=3]
[ext_resource path="res://assets/spaceBG.jpg" type="Texture" id=4]
[ext_resource path="res://assets/carnivalBG.jpg" type="Texture" id=5]
[ext_resource path="res://screens/background.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/Title.tres" type="DynamicFont" id=7]
[ext_resource path="res://fonts/Normal.tres" type="DynamicFont" id=8]

[node name="Start Screen" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1282.0
margin_bottom = 721.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
carnivalTheme = ExtResource( 2 )
spaceTheme = ExtResource( 3 )
spaceBackground = ExtResource( 4 )
carnivalBackground = ExtResource( 5 )

[node name="background" parent="." index="0" instance=ExtResource( 6 )]

[node name="Panel" type="Panel" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -171.0
margin_top = -153.5
margin_right = 192.0
margin_bottom = 205.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
_sections_unfolded = [ "Theme" ]

[node name="Title Banner" type="Label" parent="Panel" index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -150.5
margin_top = 21.0
margin_right = 148.5
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
text = "Target Hunt"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel" index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -151.5
margin_top = 90.0
margin_right = 148.5
margin_bottom = 326.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 4
alignment = 1
_sections_unfolded = [ "Grow Direction", "Margin", "Rect", "Size Flags", "custom_constants" ]
__meta__ = {
"_edit_group_": true
}

[node name="New Game" type="Button" parent="Panel/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 300.0
margin_bottom = 56.375
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play New Game"
flat = false
align = 1
_sections_unfolded = [ "Theme" ]

[node name="High Scores" type="Button" parent="Panel/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 60.0
margin_right = 300.0
margin_bottom = 116.375
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "High Scores"
flat = false
align = 1

[node name="ChangeTheme" type="Button" parent="Panel/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 120.0
margin_right = 300.0
margin_bottom = 176.375
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Change Theme"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Exit" type="Button" parent="Panel/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 180.0
margin_right = 300.0
margin_bottom = 236.375
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = false
align = 1
_sections_unfolded = [ "Visibility" ]

[node name="HTTPRequest" type="HTTPRequest" parent="." index="2"]

download_file = ""
use_threads = false
body_size_limit = -1
max_redirects = 8

[connection signal="pressed" from="Panel/VBoxContainer/New Game" to="." method="_on_New_Game_pressed"]

[connection signal="pressed" from="Panel/VBoxContainer/High Scores" to="." method="_on_High_Scores_pressed"]

[connection signal="pressed" from="Panel/VBoxContainer/ChangeTheme" to="." method="_on_ChangeTheme_pressed"]

[connection signal="pressed" from="Panel/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]


